@@ -240,3 +240,11 @@ This file is the documentation. You can [read it on github](https://github.com/b
     pmake doc
 
 Note: pmake command is for Debian like. For other distribution, use **bmake** instead of pmake.
+
+## Tips
+
+### Write post ahead of current's datetime
+
+In Makefly you can publish early posts. To do that metadata file should have a timestamp superior to current's one when you generate the weblog. 
+
+For an example we are 2013, the 6th march. 12:30:00. The timestamp is : 1362569400. Your post (situated in the **db** directory) have to have a timestamp inferior to current's one (1362569400).
